// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`noprocotol.angular generates a js bundle and a sourcemap file 1`] = `
"\\"use strict\\";var app=angular.module(\\"app\\",[\\"ngAnimate\\"]);app.controller(\\"TestCtrl\\",[\\"$scope\\",function(r){r.x;return!0}]);
//# sourceMappingURL=app.min.js.map
"
`;

exports[`noprocotol.angular places html files into the $templateCache 1`] = `
"\\"use strict\\";!function(){var t;try{t=angular.module(\\"app\\")}catch(l){t=angular.module(\\"app\\",[])}t.run([\\"$templateCache\\",function(t){t.put(\\"/test/fixtures/hello.html\\",\\"<h1>Hello</h1><p>world</p>\\")}])}();
//# sourceMappingURL=app.min.js.map
"
`;
